--- a/index.html
+++ b/index.html
@@ -12,6 +12,18 @@
     <link rel="stylesheet" href="https://bootswatch.com/4/darkly/bootstrap.min.css">
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js"></script>
+    <script>
+        function run() {
+            $.post('/', { url: $('#url').val() }, function (data, status) {
+                if (status === "success") {
+                    $('#result').html(`Your shortened url is: <a href="${window.location.href}/${data}">${window.location.href}/${data}</a>`);
+                }
+                else {
+                    $('#result').html('Error occurred!!!');
+                }
+            })
+        }
+    </script>
 </head>
 
 <body>
@@ -22,12 +34,22 @@
         </div>
     </div>
     <div class="container">
-        <form>
+        <noscript>
+            <div class="alert alert-warning">
+                <strong>JS Disabled!</strong> Please enable JS for this website to function properly.
+            </div>
+        </noscript>
+        <form onsubmit="run(); return false;">
             <div class="form-group">
                 <label for="url">Target URL:</label>
                 <input type="text" class="form-control" placeholder="Enter target URL" id="url" required>
             </div>
-            <button type="button" class="btn btn-primary">Minilonkify!</button>
+            <div class="form-group">
+                <label>Extra Options (if you want to disguise the link as something else over social media): </label>
+                <input type="text" class="form-control" placeholder="Custom slug" id="slug">
+            </div>
+            <button type="submit" class="btn btn-primary">Minilonkify!</button>
+            <p id="result"></p>
         </form>
     </div>
 </body>
