--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     </div>
     <div class="container">
         <noscript>
-            <div class="alert alert-warning">
+            <div class="alert alert-danger">
                 <strong>JS Disabled!</strong> Please enable JS for this website to function properly.
             </div>
         </noscript>
