update home page

--- a/index.html
+++ b/index.html
@@ -69,7 +69,9 @@
     <div class="container">
         <div class="jumbotron">
             <h1>Minilonk</h1>
-            <p>A simple URL shortener</p>
+            <p>A simple URL shortener by <a href="https://github.com/ApocalypseCalculator" rel="noreferrer noopener"
+                    target="_blank">ApocalypseCalculator</a></p>
+            <img src="/icon.png" height="100px">
         </div>
     </div>
     <div class="container">
@@ -95,5 +97,9 @@
             <button type="submit" class="btn btn-primary">Minilonkify!</button><br><br>
             <p id="result"></p>
         </form>
+    </div>
+    <div class="jumbotron text-center" style="margin-bottom:0">
+        <p>Minilonk by <a href="https://github.com/ApocalypseCalculator/Minilonk" target="_blank"
+                rel="noreferrer noopener">ApocalypseCalculator</a><br><br>This site is using version {{VERSION}}</p>
     </div>
 </body>
